# spreadsheet-chat

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/spreadsheet_chat/: app.py  executor.py  llm_agent.py  runner.py  serialize.py  settings.py  storage.py  utils.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: spreadsheet.ts
frontend/src/components/: Conversation.tsx  QuestionPanel.tsx  UploadPanel.tsx
frontend/src/hooks/: useSpreadsheetChat.ts
frontend/src/schemas/: spreadsheet.ts
